Update Solution and include .gitignore

--- a/NopCommerceTranslator.csproj
+++ b/NopCommerceTranslator.csproj
@@ -96,6 +96,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Marjani.Net.Utility, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dependencies\Marjani.Net.Utility.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
@@ -151,12 +155,6 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Marjani.Net.Utility\Marjani.Net.Utility.csproj">
-      <Project>{5208b5fc-7f16-42f7-89e8-2c71b8172247}</Project>
-      <Name>Marjani.Net.Utility</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
